fixed issues around breadcrumbs
git-svn-id: https://svn.code.sf.net/p/openuss/code/trunk/openuss-plexus@2590 60046477-0c10-0410-bf4b-e552a4ff1768